# skill-route

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: agent-setup.md  astra-backend.md  evals.md  getting-started.md  mcp-server.md  metadata-overlays.md  roadmap.md  route-observability.md  skill-atlas.md
examples/evals/: dogfood_routes.json  golden_routes.json
examples/skills/astra-vector-backend/: SKILL.md
examples/skills/mcp-server-patterns/: SKILL.md
examples/skills/mcp-server-patterns/templates/: tool-template.md
examples/skills/python-patterns/: SKILL.md
examples/skills/python-testing/: SKILL.md
mcp/: package-lock.json  package.json  tsconfig.json
mcp/src/: bridge.ts  index.ts
mcp/tests/: mcp-smoke.mjs
scripts/: bootstrap.sh  install.sh
src/skillroute/: __init__.py  __main__.py  atlas.py  backends.py  catalog.py  cli.py  client_setup.py  context.py  dogfood.py  evals.py  mcp_setup.py  metadata.py  models.py  overlays.py  parser.py  rerankers.py  routing.py  text.py  ui_server.py
tests/: conftest.py  test_atlas.py  test_backends.py  test_catalog.py  test_cli.py  test_client_setup.py  test_context.py  test_dogfood.py  test_evals.py  test_metadata.py  test_parser.py  test_rerankers.py  test_routing.py  test_scripts.py  test_ui_server.py
tests/fixtures/: golden_routes.json
tests/fixtures/skills/astra-vector-backend/: SKILL.md
tests/fixtures/skills/mcp-server-patterns/: SKILL.md
tests/fixtures/skills/mcp-server-patterns/templates/: tool.md
tests/fixtures/skills/python-testing/: SKILL.md
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  graph.test.ts  graph.ts  main.tsx  styles.css  types.ts  ui.ts  util.ts
web/src/components/: graph-nodes.tsx  inspector.tsx  panels.tsx  primitives.tsx  route-preview.tsx
